--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,19 +2,4 @@
 $gris: #898989;
 $amarillo: #F9C444;
 $grisTenue: #E7E7E7;
-
-/* Responsive */
-$Asmall: 575.98px;
-$small: 576px;
-$Atablet: 767.98px;
-$tablet: 767.98px;
-$Alaptop: 919.98px;
-$laptop: 920px;
-$Adesktop: 1199.98px;
-$desktop: 1200px;
-
-/* maxwidth */
-$mWtablet: 540px;
-$mWlaptop: 720px;
-$mWdesktop: 960px;
-$mWfull: 1140px;
+$rojoDanger: #a50038;
