--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -1,3 +1,5 @@
+@import '../scss/mixins';
+
 .superContainer{
     background-image: url('../images/imagebkg.png');
     background-repeat: no-repeat;
@@ -5,4 +7,10 @@
     background-attachment: fixed;
     display: grid;
     grid-template-columns: 40% 60%;
+    @include smallTablet(){
+        grid-template-columns: 100%;
+    }
+    @include Asmall(){
+        grid-template-columns: 100%;
+    }
 }
