--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import './scss/mixins';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -34,5 +36,6 @@ input[type=text], input[type=password] {
 .textCenter{
   text-align: center;
 }
+
 
 
