--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -60,6 +60,7 @@
                 font-size: 14px;
                 font-weight: 600;
                 font-family: 'Voluta';
+                cursor: pointer;
             }
             button {
                 background-color: $amarillo;
